# rust-learning

./: lint.sh  test.sh
.github/workflows/: rust.yml
calculator/: Cargo.toml  Makefile  README.md
calculator/src/: lib.rs  main.rs
calculator/tests/: test_lib.rs
guessing_game/src/: main.rs
rdedupe/: Cargo.toml
rdedupe/src/: main.rs
sqlite-hf/: Cargo.toml  README.md
sqlite-hf/data/: lyrics.txt
sqlite-hf/src/: lib.rs  main.rs
translate/: Cargo.toml  README.md
translate/data/: lyrics.txt
translate/src/: lib.rs  main.rs
