[package]
name = "rdedupe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
indicatif = { version = "*", features = ["rayon"] }
md5 = "0.7.0"
rayon = "1.8.0"
walkdir = "2.4.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
